--- a/pom.xml
+++ b/pom.xml
@@ -50,11 +50,11 @@
     <dockerfile-maven-version>1.4.13</dockerfile-maven-version>
 
     <spring-cloud.version>Hoxton.SR1</spring-cloud.version>
-    <spring-boot-admin.version>2.2.1</spring-boot-admin.version>
+    <spring-boot-admin.version>2.2.2</spring-boot-admin.version>
 
     <mongobee.version>0.13</mongobee.version>
 
-    <javamelody.version>1.81.0</javamelody.version>
+    <javamelody.version>1.82.0</javamelody.version>
     <orika-core.version>1.5.4</orika-core.version>
 
     <jjwt.version>0.5.1</jjwt.version>
@@ -226,10 +226,10 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-actuator</artifactId>
     </dependency>
-    <!--dependency>
+    <dependency>
       <groupId>de.codecentric</groupId>
       <artifactId>spring-boot-admin-starter-client</artifactId>
-    </dependency-->
+    </dependency>
 
     <!-- Utils -->
     <dependency>
@@ -296,10 +296,6 @@
         </executions>
       </plugin>
       <plugin>
-        <groupId>pl.project13.maven</groupId>
-        <artifactId>git-commit-id-plugin</artifactId>
-      </plugin>
-      <plugin>
         <groupId>org.sonarsource.scanner.maven</groupId>
         <artifactId>sonar-maven-plugin</artifactId>
         <version>${sonar-maven-plugin.version}</version>
@@ -308,6 +304,9 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
         <version>${maven-compiler-plugin.version}</version>
+        <configuration>
+          <release>12</release>
+        </configuration>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
