--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,7 @@
   <name>Wanna Go Framework - Authorization Server</name>
 
   <properties>
-    <java.version>14</java.version>
+    <java.version>13</java.version>
 
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
@@ -260,6 +260,18 @@
       <artifactId>spring-context-support</artifactId>
       <version>5.1.10.RELEASE</version>
       <scope>compile</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-test</artifactId>
+      <scope>test</scope>
+      <exclusions>
+        <exclusion>
+          <groupId>org.junit.vintage</groupId>
+          <artifactId>junit-vintage-engine</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
   </dependencies>
 
